[package]
name = "ironbox"
version = "0.3.0"
edition = "2021"
description = "A native containerd shim OCI runtime built in Rust — no runc dependency"
license = "Apache-2.0"
repository = "https://github.com/mtclinton/ironbox"
readme = "README.md"
keywords = ["container", "runtime", "containerd", "oci", "linux"]
categories = ["os::linux-apis", "command-line-utilities"]

[[bin]]
name = "containerd-shim-ironbox-v1"
path = "src/main.rs"

[dependencies]
containerd-shim = { version = "0.10.0", features = ["async"] }

libc = "0.2"
log = { version = "0.4", features = ["std", "kv_unstable"] }
nix = { version = "0.29", features = ["socket", "uio", "term", "sched", "mount", "signal", "hostname", "user", "process"] }
oci-spec = "0.7"
prctl = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "std", "formatting"] }
uuid = { version = "1.0", features = ["v4"] }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3.4"
nix = { version = "0.29", features = ["socket", "uio", "term", "event", "sched", "mount", "signal", "hostname", "user", "process"] }
tokio-eventfd = "0.2.1"
